# peopledd

./: .env.example  .gitignore  AGENTS.md  API.md  CLAUDE.md  DEPLOYMENT_READY.md  Dockerfile  Procfile  RAILWAY.md  RAILWAY_ENV_EXAMPLE.md  README.md  docker-compose.yml  examples_api.py  pyproject.toml  railway.toml
docs/: DUE_DILIGENCE_CHARTER.md  GOLD_SET.md  INTEGRATION_EXA_PEOPLE_SEARCH.md  NIOSS_MAPPING.md  RUNS_HEALTH_GATE.md
examples/: input.json  input.sample.json
gold_set/: companies.json
migrations/: 001_jobs.sql
src/peopledd/: api.py  (+5 more)
tests/: conftest.py  test_adaptive_models.py  test_adaptive_policy.py  test_api_jobs_contract.py  test_calibrate.py  test_circuit_breaker.py  test_cli_ops.py  test_cvm_cad_parse.py  test_discovery_ranking.py  test_exa_company_rich.py  test_exa_people_search.py  test_governance_phase_ri.py  test_graph_runner_adaptive_failures.py  test_graph_runner_artifact_write_failure.py  test_graph_runner_review_fixes.py  test_harvest_cache.py  test_identity_resolution.py  test_market_pulse.py  test_n0_entity_resolution.py  test_n1_private_web.py  test_n1b_reconciliation.py  test_n2_n3_harvest.py  test_n4_n5_n6.py  test_n8_n7_n9_evidence.py  test_node_purity.py  test_perplexity_sonar.py  test_person_sourcing.py  test_pipeline.py  test_pipeline_merge.py  test_pipeline_state.py  test_pipeline_telemetry.py  test_private_governance_discovery.py  test_recovery_planner.py  test_ri_surface_discoverer.py  test_run_inspect.py  test_run_metadata.py  test_runs_health.py  test_runtime_context.py  test_search_replanning.py  test_semantic_fusion.py  (+4 more)
(+76 files in other folders)
