[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peopledd"
version = "0.1.0"
description = "Company Organization & Governance X-ray pipeline (SPEC v1.1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pandas>=2.2",
  "httpx>=0.27",
  "python-dotenv>=1.0.0",
  "beautifulsoup4>=4.12.0",
  "trafilatura>=1.8.0",
  "aiohttp>=3.9.0",
]

[project.optional-dependencies]
strategy = [
  "openai>=1.40.0",
]

[project.scripts]
peopledd = "peopledd.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
